<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">KillerApp</string>

    <string name="action_settings">Settings</string>
    <string name="action_prediction">Make Prediction</string>
    <string name="action_prototypes" translatable="false">Choose version</string>

    <string name="main_title">Tell me what you know</string>
    <string name="year_dialog_title">Year of publication</string>
    <string name="prediction_title">Here is what I think</string>
    <string name="answer_dialog_title">Select the right answer</string>
    <string name="select_prediction_title">What do you want to know?</string>
    <string name="select_features_title">What do you already know?</string>

    <string name="title_label">Title</string>
    <string name="year_label">Year of publication</string>
    <string name="detective_label">Detective</string>
    <string name="location_label">Location</string>
    <string name="cause_label">Cause of death</string>
    <string name="pov_label">Point of view</string>
    <string name="victim_label">Victim\'s gender</string>
    <string name="first_label">First</string>
    <string name="third_label">Third</string>
    <string name="uk_label">UK</string>
    <string name="international_label">International</string>
    <string name="f_label">Female</string>
    <string name="m_label">Male</string>
    <string name="murderer_label">Murderer\'s gender</string>
    <string name="rating_label">Book\'s rating</string>

    <string name="select_label">Select&#8230;</string>
    <string name="correct_label">Correct</string>
    <string name="incorrect_label">Incorrect</string>
    <string name="ok_label">OK</string>
    <string name="detect_label">Go Detect!</string>
    <string name="back_label">Back</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="selectall_label">Select all</string>
    <string name="deselectall_label">Deselect all</string>
    <string name="prediction_label">Prediction Type</string>

    <string name="colonel_race">Colonel Race</string>
    <string name="hercule_poirot">Hercule Poirot</string>
    <string name="miss_marple">Miss Marple</string>
    <string name="mystery_novel">Mystery Novel</string>
    <string name="superintendent_battle">Superintendent Battle</string>
    <string name="tommy_tuppence">Tommy and Tuppence</string>

    <string name="accident">Accident</string>
    <string name="concussion">Concussion</string>
    <string name="drowning">Drowning</string>
    <string name="none">None</string>
    <string name="poison">Poison</string>
    <string name="shooting">Shooting</string>
    <string name="stabbing">Stabbing</string>
    <string name="strangling">Strangling</string>
    <string name="throatslit">Throat Slit</string>
    <string name="unknown">Unknown</string>

    <string name="error">Error</string>
    <string name="title_error">Please enter the title of the novel.</string>
    <string name="year_error">Please select the year of publication.</string>
    <string name="detective_error">Please select the detective of the story.</string>
    <string name="location_error">Please select the location of the story.</string>
    <string name="pov_error">Please select the point of view of the story.</string>
    <string name="cause_error">Please select the cause of death of the victim.</string>
    <string name="gender_error">Please select the gender of the murderer.</string>
    <string name="victim_error">Please select the gender of the victim.</string>
    <string name="rating_error">Please rate the book.</string>
    <string name="right_answer_error">Please select the right answer.</string>
    <string name="prediction_error">Please select the prediction you are interested in.</string>
    <string name="feature_error">Please select at least two different elements.</string>

    <string name="weapon_image_description">Murder Weapon</string>
    <string name="detective_image_description">Detective</string>
    <string name="location_image_description">Location</string>
    <string name="victim_image_description">Victim\'s gender</string>
    <string name="murderer_image_description">Murderer\'s gender</string>
    <string name="up_image_description">Up button</string>
    <string name="down_image_description">Down button</string>

    <string name="retrain_question">Do you want to teach me the right answer?</string>

    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="lots">Lots</string>

    <string name="wild_guess">It is just a wild guess..</string>
    <string name="quite_confident">I am quite confident..</string>
    <string name="very_confident">I am very confident..</string>

    <string name="drawer_hint">Swipe left to right to open the features drawer.</string>
    <string name="drawer_close_hint">Swipe right to left to close the drawer.</string>

    <string name="try_again_label">Try again</string>

    <string name="fetch_data_question">Do you want to download any new information from the server?</string>
    <string name="compare_datasets">Comparing the local dataset to the server.</string>
    <string name="update_local">Updating the local dataset.</string>
    <string name="send_data_question">Do you want to share this information with the other apps to improve my skills?</string>
    <string name="update_server">Updating the server\'s dataset.</string>

    <string name="network_error">Impossible to connect the app to the network.
        (Verify that your device is connected to the Wi-Fi, or enable mobile data access to the app.)</string>
    <string name="download_error">An error occurred during the file transfer.</string>
    <string name="server_error">An error occurred while trying to reach the server.</string>
    <string name="server_update_error">An error occurred while trying to update the server.</string>
    <string name="local_update_error">An error occurred while trying to update the local dataset.</string>

    <string name="title_activity_manager" translatable="false">Test Manager</string>
    <string name="test_title">Select layouts</string>


    <string name="pref_language_key" translatable="false">pref_language</string>
    <string name="pref_language">Language</string>
    <string name="pref_languageEN" translatable="false">English</string>
    <string name="pref_languageFR" translatable="false">Français</string>

    <string name="language_english" translatable="false">English</string>
    <string name="language_french" translatable="false">French</string>


    <string name="class_label">Class Selection</string>
    <string name="class_dialog">Dialog</string>
    <string name="class_tabs">Tabs</string>

    <string name="features_label">Features Selection</string>
    <string name="features_dialog">Dialog</string>
    <string name="features_drawer">Drawer</string>

    <string name="input_label">Features Input</string>
    <string name="input_text">Text</string>
    <string name="input_images">Images</string>

    <string name="images_label">Images Selection</string>
    <string name="images_spinner">Spinner</string>
    <string name="images_grid">Grid</string>


    <string name="pref_customInterface">Interface Customization</string>

    <string name="pref_classLayout_key" translatable="false">pref_classLayout</string>
    <string name="pref_classLayout">Prediction Selection</string>

    <string name="pref_classDialog">Pop-up Window</string>
    <string name="pref_classDialog_summary">Select type of prediction from pop-up window</string>
    <string name="pref_classTabs">Menu Bar with Tabs</string>
    <string name="pref_classTabs_summary">Select type of prediction from menu bar with tabs</string>

    <string name="pref_featuresLayout_key" translatable="false">pref_featuresLayout</string>
    <string name="pref_featuresLayout">Attributes Selection</string>

    <string name="pref_featuresDialog">Pop-up Window</string>
    <string name="pref_featuresDialog_summary">Select story details from pop-up window</string>
    <string name="pref_featuresDrawer">Side Drawer</string>
    <string name="pref_featuresDrawer_summary">Select story details from side drawer</string>

    <string name="pref_inputLayout_key" translatable="false">pref_inputLayout</string>
    <string name="pref_inputLayout">Story Details Input</string>

    <string name="pref_inputText">Text</string>
    <string name="pref_inputText_summary">Use text to enter story details</string>
    <string name="pref_inputImages">Images</string>
    <string name="pref_inputImages_summary">Use images to enter story details</string>

    <string name="pref_imagesLayout_key" translatable="false">pref_imagesLayout</string>
    <string name="pref_imagesLayout">Images Display</string>

    <string name="pref_imagesSpinner">Spinner</string>
    <string name="pref_imagesSpinner_summary">Display story details images in spinner</string>
    <string name="pref_imagesGrid">Grid</string>
    <string name="pref_imagesGrid_summary">Display story details images in grid</string>

    <string name="pref_connectionSettings">Connection Settings</string>

    <string name="pref_shareData">Share content</string>
    <string name="pref_shareData_summary">Share data with other users to improve predictions</string>

    <string name="pref_sendDataAuto">Always send data to server</string>
    <string name="pref_sendDataAutoOn_summary">Never ask confirmation before sending data to server</string>
    <string name="pref_sendDataAutoOff_summary">Always ask confirmation before sending data to server</string>

    <string name="pref_fetchDataAuto">Always download data from server</string>
    <string name="pref_fetchDataAutoOn_summary">Never ask confirmation before downloading data from server</string>
    <string name="pref_fetchDataAutoOff_summary">Always ask confirmation before downloading data from server</string>

    <string name="pref_correctAnswerAuto">Always correct wrong prediction</string>
    <string name="pref_correctAnswerAutoOn_summary">Never ask confirmation to correct wrong prediction</string>
    <string name="pref_correctAnswerAutoOff_summary">Always ask confirmation before downloading data from server</string>
</resources>
