<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_features_title"
        android:textStyle="bold"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" >

        <Button android:id="@+id/features_selectall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:text="@string/selectall_label" />

        <Button android:id="@+id/features_deselectall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:layout_toEndOf="@id/features_selectall"
                android:text="@string/deselectall_label" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:rowCount="8"
        android:columnCount="1">

        <CheckBox android:id="@+id/year_checkbox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/year_label"/>

        <CheckBox android:id="@+id/detective_checkbox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/detective_label" />

        <CheckBox android:id="@+id/setting_checkbox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/setting_label" />

        <CheckBox android:id="@+id/pov_checkbox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/pov_label" />

        <CheckBox android:id="@+id/weapon_checkbox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/cause_label" />

        <CheckBox android:id="@+id/victim_checkbox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/victim_label" />

        <CheckBox android:id="@+id/murderer_checkbox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/murderer_label" />



    </GridLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" >

        <Button android:id="@+id/features_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:text="@string/back_label" />

        <Button android:id="@+id/features_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2.5dp"
                android:layout_toEndOf="@id/features_back_button"
                android:text="@string/ok_label" />

    </RelativeLayout>

</LinearLayout>
