<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" 
              android:background="@drawable/background_image" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_prediction_title"
        android:textStyle="bold"
        android:textSize="22sp" 
        style="@style/titleview" />
    
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal|center_vertical" >

        <Button android:id="@+id/class_weapon_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/button"
                android:textSize="22sp"
                android:text="@string/cause_label" />

        <Button android:id="@+id/class_gender_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="true"
                style="@style/button"
                android:textSize="22sp"
                android:text="@string/murderer_label" />


    </RelativeLayout>

</LinearLayout>