<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_title"
            style="@style/titleview"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:rowCount="4"
            android:columnCount="1">


            <EditText android:id="@+id/title_textfield"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:layout_marginTop="10dp"
                      android:background="@drawable/textfield"
                      android:maxLines="2"
                      android:maxLength="98"
                      style="@style/edittext"
                      android:focusable="true"
                      android:nextFocusForward="@+id/year_button"
                      android:nextFocusDown="@+id/year_button"
                      android:nextFocusUp="@+id/detect_button" />

            <RelativeLayout android:id="@+id/year_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    style="@style/textview"
                    android:textSize="17sp"
                    android:text="@string/year_label" />

                <Button android:id="@+id/year_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        style="@style/button"
                        android:textSize="17sp"
                        android:text="@string/select_label"
                        android:focusable="true"
                        android:nextFocusForward="@+id/detective_spinner"
                        android:nextFocusDown="@+id/detective_spinner"
                        android:nextFocusUp="@id/title_textfield" />
            </RelativeLayout>

            <RelativeLayout android:id="@+id/pov_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal" >

                <TextView
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/pov_label"
                    style="@style/textview"
                    android:textSize="17sp"/>

                <RadioGroup android:id="@+id/pov_group"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:orientation="horizontal"
                            android:background="@color/firebrick" >

                    <RadioButton android:id="@+id/first_button"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/first_label"
                                 style="@style/radiobutton"
                                 android:textSize="17sp"/>

                    <RadioButton android:id="@+id/third_button"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:paddingEnd="5dp"
                                 android:text="@string/third_label"
                                 style="@style/radiobutton"
                                 android:textSize="17sp"/>

                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout android:id="@+id/rating_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    style="@style/textview"
                    android:text="@string/rating_label"
                    android:textSize="17sp"/>

                <RatingBar android:id="@+id/rating_bar"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentEnd="true"
                           android:layout_centerVertical="true"
                           android:stepSize="0.5"
                           android:isIndicator="false"
                           style="@style/Base.Widget.AppCompat.RatingBar.Indicator"/>

            </RelativeLayout>
        </GridLayout>

        <GridView android:id="@+id/feature_gridview"
                  android:layout_width="290dp"
                  android:layout_height="300dp"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="5dp"
                  android:columnWidth="140dp"
                  android:numColumns="2"
                  android:verticalSpacing="20dp"
                  android:stretchMode="columnWidth" />

        <Button android:id="@+id/detect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                style="@style/button"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:text="@string/detect_label" />

    </LinearLayout>

</ScrollView>
